--- a/style.css
+++ b/style.css
@@ -15,3 +15,22 @@ body{
     color: darkblue;
     font-size: 18px;
 }
+.app{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,300px);
+    gap: 40px;
+    justify-content: center;
+    padding: 50px;
+}
+.note{
+    padding: 17px;
+    border-radius: 15px;
+    resize: none;
+    box-shadow: 0 0 3px rgba(0,0,0,.3);
+    font-size: 18px;
+    height: 200px;
+    color: darkblue;
+    border:none ;
+    outline: none;
+    background-color: rgba(255,255,255,.1);
+}
