--- a/style.css
+++ b/style.css
@@ -38,5 +38,9 @@ body{
 .note::placeholder{
     color: gray;
     opacity: 30%;
-    
+
+}
+.note:hover,.note:focus{
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
+    transition: all 300ms ease;
 }
