--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     margin:0;
-    background: linear-gradient(to left, lightblue,lightgreen);
+    background: linear-gradient(to left, rgb(34, 173, 220),lightgreen);
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -34,13 +34,21 @@ body{
     outline: none;
     background-color: rgba(255,255,255,.1);
     box-sizing: border-box;
-}
+    }
 .note::placeholder{
     color: gray;
     opacity: 30%;
 
 }
-.note:hover,.note:focus{
+.note:hover,
+.note:focus{
     box-shadow: 0 0 10px rgba(0,0,0,.3);
     transition: all 300ms ease;
 }
+.btn{
+    height: 200px;
+    border-color: rgba(255,255,255,0.37);
+    background: rgba(255,255,0.27);
+
+}
+
