--- a/style.css
+++ b/style.css
@@ -49,6 +49,14 @@ body{
     height: 200px;
     border-color: rgba(255,255,255,0.37);
     background: rgba(255,255,0.27);
-
+    border-radius: 15px;
+    font-size: 70px;
+    font-weight: 700;
+    color: rgba(0,0,0,0.3);
+    cursor: pointer;
 }
-
+.btn:hover{
+    background: rgba(255,255,255,0.55);
+    color: rgba(0,0,0,0.6);
+    transition:all 300ms ease;
+}
